# rust-static-detector-old

./: Cargo.toml  LICENSE  README.md  run.sh
src/: main.rs
src/alias_analysis_bak/: memory.rs  mod.rs
src/callgraph/: mod.rs
src/control_dependence_analysis/: mod.rs
src/dataflow/: mod.rs
src/detector/: mod.rs
src/detector/atomic_atomicity_violation/: mod.rs
src/detector/drop_identifier/: mod.rs
src/detector/panic/: mod.rs
src/detector/use_after_free/: mod.rs  mod_bak.rs
src/interior_mutability/: mod.rs
src/lockgraph/: lock.rs  mod.rs
src/pointer_analysis/: mod.rs
src/pointer_analysis_2/: mod.rs
src/pointer_analysis_bak/: mod.rs
src/post_dominators/: mod.rs
src/util/: graph.rs  instruction.rs  mod.rs  mono.rs
stubs/alias-stub/: Cargo.toml
stubs/alias-stub/src/: main.rs
stubs/atomic-cond/: Cargo.toml  atomic_cond-ae9ced807558c7a7.mir
stubs/atomic-cond/src/: main.rs
stubs/atomic-usage/: Cargo.toml
stubs/atomic-usage/src/: main.rs
stubs/complex-ptr/: Cargo.toml  complex_ptr-f7aaadb61ea527ab.mir
stubs/drop-glue/: Cargo.toml
stubs/drop-uaf/: Cargo.toml
stubs/fn-closure/: Cargo.toml
stubs/fn-ptr/: Cargo.toml
stubs/global-escape/: Cargo.toml  global_escape-05b5075387766853.mir
stubs/index-mut/: Cargo.toml
stubs/interior-mut/: Cargo.toml
stubs/local-info/: Cargo.toml
stubs/lock-wrapper/: Cargo.toml
stubs/recursive/: Cargo.toml
stubs/result-option/: Cargo.toml
stubs/thread-join/: Cargo.toml
stubs/unique-ptr/: Cargo.toml
stubs/vec-stub/: Cargo.toml
stubs/vec-uaf/: vec_uaf-4bf4e8db191a670c.mir
(+16 files in other folders)
